--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency directories
 node_modules
 dist
 dist-ssr
@@ -15,10 +16,45 @@ dist-ssr
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Build output
+/public/build/
+build/
+frontend/build/
+frontend/dist/
+frontend/public/*.cache
+
+# System files
+Thumbs.db
+ehthumbs.db
+Icon?
+._*
+*.bak
+*.tmp
+
+# Vite specific
+.vite/
+.vite-cache/
+.cache/
+
+# React specific
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
+
+# npm package lock
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Git-related
+.git/
+.gitignore~
