--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ pnpm-lock.yaml
 # Git-related
 .git/
 .gitignore~
+backend/models/__pycache__/document_validator.cpython-312.pyc
+backend/static/uploaded_docs/Andrii_Pervashov_CV.pdf
+backend/utils/__pycache__/database.cpython-312.pyc
+backend/utils/__pycache__/file_processing.cpython-312.pyc
